заменена часть чем полезен

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <h3>Пара слов о себе</h3>
       <p>Качок-боевичок</p>
       <h3>Чем могу быть полезен</h3>
-      <p>Подниму с пола 200 кило с улыбкой</p>
+      <p>Разработаю сайт для Вас</p>
 </div>
     </section>
 
