--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
   <body>
     <header class="page-header">
 <div class="container">
-      +375(29)7858477
+      <a class="header-email" href="avlasevich_ij@yahoo.com">avlasevich_ij@yahoo.com</a>
+      <a class="header-phone" href="+375(29)7858477">+375(29)7858477</a>
 </div>
     </header>
 
@@ -24,20 +25,34 @@
     <section class="intro">
 <div class="container">
       <h2 class="subheading">Давайте познакомимся</h2>
+      <figure class="user-image">
+<img src="files/user1.png" alt="Фотография Неопознанного Медведя" style="border-radius:50%;">
+      </figure>
       <h3>Пара слов о себе</h3>
-      <p>Качок-боевичок</p>
+      <p>Качок-боевичок-разработчик</p>
       <h3>Чем могу быть полезен</h3>
       <p>Разработаю сайт для Вас</p>
+</div>
+<div class="skills">
+      <h3>Мои навыки</h3>
+      <dl class="skills-list">
+        <dt class="skill-html">HTML</dt>
+        <dd class="level" style="width:60%;"><div>60%</div></dd>
+        <dt class="skill-css">CSS</dt>
+        <dd class="level" style="width:40%"><div>40%</div></dd>
+      </dl>
 </div>
     </section>
 
     <section class="portfolio">
 <div class="container">
       <h2 class="subheading">Мои работы</h2>
-
+<figure class="project-image">
+  <img src="files/project.jpg" width="928" height="536" alt="Cайт магазина товаров для дома">
+</figure>
       <h3>Магазин товаров для дома</h3>
       <p>Мой первый сайт.</p>
-
+<a class="button" href="source/index.html">Open page</a>
       <h3>Блог начинающего верстальщика</h3>
       <p>Статический блог про обучение HTML и CSS.</p>
 </div>
@@ -45,7 +60,8 @@
 
     <footer class="page-footer">
 <div class="container">
-      avlasevich_ij@yahoo.com
+      <a class="footer-phone" href="+375(29)7858477">+375(29)7858477</a>
+      <a class="footer-email" href="avlasevich_ij@yahoo.com">avlasevich_ij@yahoo.com </a>
 </div>
     </footer>
   </body>
