--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
 <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700|Old+Standard+TT&display=swap&subset=cyrillic" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <title>Портфолио Junior верстальщика</title>
+    <title>Портфолио Junior-верстальщика</title>
   </head>
 
   <body>
@@ -26,7 +26,7 @@
 <div class="container">
       <h2 class="subheading">Давайте познакомимся</h2>
       <figure class="user-image">
-<img src="files/user1.png" alt="Фотография Неопознанного Медведя" style="border-radius:50%;">
+<img src="user1.png" alt="Фотография Неопознанного Медведя" style="border-radius:50%;">
       </figure>
       <h3>Пара слов о себе</h3>
       <p>Качок-боевичок-разработчик</p>
@@ -48,7 +48,7 @@
 <div class="container">
       <h2 class="subheading">Мои работы</h2>
 <figure class="project-image">
-  <img src="files/project.jpg" width="928" height="536" alt="Cайт магазина товаров для дома">
+  <img src="project.jpg" width="928" height="536" alt="Cайт магазина товаров для дома">
 </figure>
       <h3>Магазин товаров для дома</h3>
       <p>Мой первый сайт.</p>
